--- a/rmf-deployment/charts/rmf-core-modules/templates/config/kone-configmap.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/templates/config/kone-configmap.yaml
@@ -5,4 +5,4 @@ metadata:
   name: kone-configmap
 data:
   {{.Values.kone.KONE_ENV}}: |-
-{{ .Files.Get "kone-env.yaml" | indent 4}}
+{{ .Files.Get "site-specific/configs/kone-config-keys.yaml" | indent 4}}
