--- a/rmf-deployment/charts/rmf-core-modules/site-specific/building_yamls/lionsbot.building.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/site-specific/building_yamls/lionsbot.building.yaml
@@ -17,7 +17,7 @@ graphs:
 levels:
   office_plan:
     drawing:
-      filename: office_edited.png
+      filename: pics/office_edited.png
     elevation: 0
     floors:
       - parameters: {ceiling_scale: [3, 1], ceiling_texture: [1, blue_linoleum], indoor: [2, 0], texture_name: [1, blue_linoleum], texture_rotation: [3, 0], texture_scale: [3, 1]}
