--- a/rmf-deployment/charts/rmf-core-modules/site-specific/nav_graphs/1.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/site-specific/nav_graphs/1.yaml
@@ -14,25 +14,52 @@ levels:
     - - 1
       - 2
       - {speed_limit: 0}
-    - - 3
-      - 0
-      - {speed_limit: 0}
     - - 0
       - 3
       - {speed_limit: 0}
+    - - 3
+      - 0
+      - {speed_limit: 0}
+    - - 3
+      - 4
+      - {speed_limit: 0}
+    - - 4
+      - 3
+      - {speed_limit: 0}
+    - - 4
+      - 5
+      - {speed_limit: 0}
+    - - 5
+      - 4
+      - {speed_limit: 0}
+    - - 5
+      - 6
+      - {speed_limit: 0}
+    - - 6
+      - 5
+      - {speed_limit: 0}
     vertices:
-    - - 10.623176439800817
-      - -5.558926388230256
-      - {name: ''}
+    - - 10.662169865417058
+      - -5.617838533425355
+      - {is_passthrough_point: false, name: ''}
     - - 9.393448709868764
       - -5.6299079270684755
-      - {name: ''}
+      - {name: L1_liftB_wait}
     - - 7.258516456702581
       - -5.678438705703406
       - {lift: B, lift_cabin: B, name: ''}
-    - - 12.032088244588447
-      - -7.722133095035921
-      - {name: m_wait}
+    - - 10.650522478544673
+      - -8.573067547553078
+      - {is_passthrough_point: false, name: ''}
+    - - 10.691288332598015
+      - -10.838484294231613
+      - {is_charger: false, is_parking_spot: false, is_passthrough_point: false, name: ''}
+    - - 13.303341440761173
+      - -13.171675328290753
+      - {is_holding_point: true, name: ''}
+    - - 15.252168708031668
+      - -14.706935960237496
+      - {is_charger: true, is_holding_point: true, is_parking_spot: true, name: panasonic_L1_0}
   L5:
     lanes:
     - - 0
@@ -103,56 +130,63 @@ levels:
       - {speed_limit: 0}
     - - 13
       - 14
-      - {door_name: dormakaba_door1, speed_limit: 0}
+      - {speed_limit: 0}
     - - 14
       - 13
-      - {door_name: dormakaba_door1, speed_limit: 0}
-    - - 14
-      - 15
-      - {speed_limit: 0}
-    - - 15
-      - 14
       - {speed_limit: 0}
     - - 14
-      - 16
-      - {speed_limit: 0}
-    - - 16
-      - 14
-      - {speed_limit: 0}
-    - - 15
-      - 17
-      - {speed_limit: 0}
-    - - 17
-      - 15
-      - {speed_limit: 0}
-    - - 17
-      - 18
-      - {speed_limit: 0}
-    - - 18
-      - 17
-      - {speed_limit: 0}
-    - - 18
       - 1
       - {speed_limit: 0}
     - - 1
+      - 14
+      - {speed_limit: 0}
+    - - 15
+      - 16
+      - {speed_limit: 0}
+    - - 16
+      - 15
+      - {speed_limit: 0}
+    - - 16
+      - 17
+      - {door_name: dormakaba_door1, speed_limit: 0}
+    - - 17
+      - 16
+      - {door_name: dormakaba_door1, speed_limit: 0}
+    - - 17
+      - 12
+      - {speed_limit: 0}
+    - - 12
+      - 17
+      - {speed_limit: 0}
+    - - 17
       - 18
+      - {speed_limit: 0}
+    - - 18
+      - 17
+      - {speed_limit: 0}
+    - - 15
+      - 19
+      - {speed_limit: 0}
+    - - 19
+      - 15
       - {speed_limit: 0}
     vertices:
     - - 10.386473832270504
       - -8.517133154069207
-      - {name: test}
+      - {is_passthrough_point: false, name: ''}
     - - 10.386278595990753
       - -10.65941458243697
       - {name: ''}
     - - 7.379150602673526
       - -5.584005399552985
       - {lift: B, lift_cabin: B, name: ''}
-    - - 9.583854114670721
-      - -5.666721681447439
+    - - 9.435758389436522
+      - -5.647793305049958
       - {name: ''}
     - - 10.37051250551341
       - -5.631694571278769
-      - {name: n_lift}
+      - {is_holding_point: false, is_parking_spot: false, is_passthrough_point: false,
+        name: ''}
     - - -33.89620228236757
       - -12.355129322975152
       - {is_charger: true, is_parking_spot: true, name: w4}
@@ -173,25 +207,28 @@ levels:
       - {name: ''}
     - - 10.366017492401191
       - -0.4395515622793389
-      - {name: m_end}
-    - - -19.773894446497643
-      - -14.5134166384147
-      - {name: pana_door_test}
-    - - -19.218806272361157
-      - -17.942378872897848
-      - {name: delta_2}
-    - - -19.001207807395033
-      - -23.314596282270784
-      - {is_charger: true, is_parking_spot: true, name: door_test}
+      - {is_holding_point: true, is_parking_spot: true, name: panasonic_L5_0}
     - - -17.790450926494387
       - -23.34384590849779
-      - {name: pana_door_test_end}
-    - - -20.240771508139588
-      - -23.322739181489478
-      - {name: ''}
+      - {name: panasonic_L5_1}
     - - -4.365804872768798
       - -23.435934723150893
-      - {name: m_mid}
+      - {name: corridor_mid}
     - - 10.428971524839149
       - -23.60820543310668
       - {name: corner}
+    - - -20.745893725679224
+      - -17.899244247941656
+      - {name: panasonic_Lab_0}
+    - - -18.913236851302933
+      - -17.921368487324607
+      - {name: ''}
+    - - -18.889543287009168
+      - -23.315473953393585
+      - {name: ''}
+    - - -21.475649218856425
+      - -23.291337385322034
+      - {name: panasonic_L5_2}
+    - - -36.523808064057135
+      - -17.719872117788125
+      - {name: panasonic_Lab_1}
