--- a/rmf-deployment/charts/rmf-core-modules/site-specific/nav_graphs/4.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/site-specific/nav_graphs/4.yaml
@@ -17,22 +17,19 @@ levels:
     - - 2
       - 1
       - {speed_limit: 0}
-    - - 1
-      - 3
+    - - 2
+      - 0
       - {speed_limit: 0}
-    - - 3
-      - 1
+    - - 0
+      - 2
       - {speed_limit: 0}
     vertices:
-    - - -18.940467657692295
-      - -17.932279249926175
-      - {name: delta_2}
-    - - -19.773894446497643
-      - -14.5134166384147
-      - {name: ''}
-    - - -19.90367569493754
-      - -11.024212785088821
-      - {name: delta_1}
-    - - -21.768650157668837
-      - -17.022852031875
+    - - -21.8260147686601
+      - -13.359192240057649
       - {name: delta_3}
+    - - -19.006026219546
+      - -13.453358810224643
+      - {name: delta_2}
+    - - -20.128876906948896
+      - -11.91939508204015
+      - {is_charger: true, is_parking_spot: true, name: delta_1}
