--- a/rmf-deployment/charts/rmf-core-modules/templates/fleets/lionsbot.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/templates/fleets/lionsbot.yaml
@@ -23,13 +23,13 @@ spec:
        - name: RMF_FLEET_ADAPTER_CONFIG_FILE
          value: {{ .Values.lionsbot.r3.RMF_FLEET_ADAPTER_CONFIG_FILE | quote }}
        - name: RMF_FLEET_ADAPTER_NAV_GRAPH_FILE
-         value: {{ .Values.lionsbot.r3.RMF_FLEET_ADAPTER_NAV_GRAPH_FILE | quote }}
+         value: {{ .Values.global.NAV_GRAPH_MOUNT_PATH }}/{{ .Values.lionsbot.r3.RMF_FLEET_ADAPTER_NAV_GRAPH_FILE}}
      volumeMounts:
        - mountPath: /etc/cyclonedds
          name: cyclonedds-configmap
-       - mountPath: /opt/rmf/src/lionsbot/fleet_adapter_r3/maps/02office
+       - mountPath: {{ .Values.global.NAV_GRAPH_MOUNT_PATH }}
          name: nav-graph-configmap
-       - mountPath:  /opt/rmf/install/fleet_adapter_r3/share/fleet_adapter_r3
+       - mountPath: /opt/rmf/install/fleet_adapter_r3/share/fleet_adapter_r3/config
          name: lionsbot-r3-configmap
  volumes:
    - name: cyclonedds-configmap
@@ -67,15 +67,13 @@ spec:
        - name: RMF_FLEET_ADAPTER_CONFIG_FILE
          value: {{ .Values.lionsbot.leoscrub.RMF_FLEET_ADAPTER_CONFIG_FILE | quote }}
        - name: RMF_FLEET_ADAPTER_NAV_GRAPH_FILE
-         value: {{ .Values.lionsbot.leoscrub.RMF_FLEET_ADAPTER_NAV_GRAPH_FILE | quote }}
-       - name: RMF_FLEET_ADAPTER_SERVER_URI
-         value: {{ .Values.lionsbot.leoscrub.RMF_FLEET_ADAPTER_SERVER_URI | quote }}
+         value: {{ .Values.global.NAV_GRAPH_MOUNT_PATH }}/{{ .Values.lionsbot.leoscrub.RMF_FLEET_ADAPTER_NAV_GRAPH_FILE}}
      volumeMounts:
        - mountPath: /etc/cyclonedds
          name: cyclonedds-configmap
        - mountPath: /opt/rmf/src/lionsbot/fleet_adapter_leoscrub/maps
          name: nav-graph-configmap
-       - mountPath: /opt/rmf/install/fleet_adapter_leoscrub/share/fleet_adapter_leoscrub
+       - mountPath: /opt/rmf/install/fleet_adapter_leoscrub/share/fleet_adapter_leoscrub/config
          name: lionsbot-leoscrub-configmap
  volumes:
    - name: cyclonedds-configmap
