--- a/rmf-deployment/charts/rmf-core-modules/templates/fleets/mir.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/templates/fleets/mir.yaml
@@ -23,13 +23,11 @@ spec:
        - name: RMF_FLEET_ADAPTER_CONFIG_FILE
          value: {{ .Values.mir.RMF_FLEET_ADAPTER_CONFIG_FILE | quote }}
        - name: RMF_FLEET_ADAPTER_NAV_GRAPH_FILE
-         value: {{ .Values.mir.RMF_FLEET_ADAPTER_NAV_GRAPH_FILE | quote }}
-       - name: RMF_FLEET_ADAPTER_SERVER_URI
-         value: {{ .Values.mir.RMF_FLEET_ADAPTER_SERVER_URI | quote }}
+         value: {{ .Values.global.NAV_GRAPH_MOUNT_PATH }}/{{ .Values.mir.RMF_FLEET_ADAPTER_NAV_GRAPH_FILE}}
      volumeMounts:
        - mountPath: /etc/cyclonedds
          name: cyclonedds-configmap
-       - mountPath:  /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs
+       - mountPath:  {{ .Values.global.NAV_GRAPH_MOUNT_PATH | quote }}
          name: nav-graph-configmap
        - mountPath:  /opt/rmf/install/fleet_adapter_mircw/share/fleet_adapter_mircw/config
          name: mir-configmap
